fix: overflow✔

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -7,7 +7,6 @@
   padding: 0;
   box-sizing: border-box;
   /* outline: 2px solid red; */
-  /* overflow: hidden; */
 }
 
 body {
@@ -15,6 +14,7 @@ body {
   background: linear-gradient(0deg, #010e21, #010e21),
     linear-gradient(0deg, #61646b, #61646b);
   /* filter: blur(10px); */
+  overflow-x: hidden;
   background-position: center;
   background-repeat: repeat;
   background-size: cover;
